--- a/hetauda-letter-automation/package.json
+++ b/hetauda-letter-automation/package.json
@@ -15,7 +15,9 @@
     "html2pdf.js": "^0.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "bikram-sambat-js": "^1.0.2"
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -30,6 +32,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "gh-pages": "^6.3.0"
   }
 }
