--- a/hetauda-letter-automation/package.json
+++ b/hetauda-letter-automation/package.json
@@ -7,10 +7,12 @@
 "scripts": {
   "dev": "vite",
   "build": "vite build",
+  "postbuild": "cp dist/index.html dist/404.html",
   "preview": "vite preview",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d dist"
 }
+
 ,
   "dependencies": {
     "html2pdf.js": "^0.10.3",
