--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+  }, 
   "dependencies": {
     "bikram-sambat-js": "^1.0.2"
   },
